--- a/Model.ipynb
+++ b/Model.ipynb
@@ -401,7 +401,7 @@
     "print(\"Evaluation Results:\")\n",
     "print(f\"Accuracy: {accuracy_score(y_true, binary_pred):.4f}\")\n",
     "print(f\"F1 Score: {f1_score(y_true, binary_pred):.4f}\")\n",
-    "print(f\"ROC AUC: {roc_auc_score(y_true, y_pred):.4f}\")\n"
+    "print(f\"ROC AUC: {roc_auc_score(y_true, y_pred):.4f}\")"
    ]
   }
  ],
