--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "[12047 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -299,10 +299,8 @@
      "text": [
       "Collecting en-core-web-sm==3.8.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m945.7 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: en-core-web-sm\n",
-      "Successfully installed en-core-web-sm-3.8.0\n",
-      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m950.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('en_core_web_sm')\n",
       "\u001b[38;5;3m⚠ Restart to reload dependencies\u001b[0m\n",
       "If you are in a Jupyter or Colab notebook, you may need to restart Python in\n",
@@ -496,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -526,10 +524,6 @@
        "      <th>word_token_answer</th>\n",
        "      <th>lemmatized_token_question</th>\n",
        "      <th>lemmatized_token_answer</th>\n",
-       "      <th>subword_token_question</th>\n",
-       "      <th>subword_token_answer</th>\n",
-       "      <th>sentence_tokenized_questions</th>\n",
-       "      <th>sentence_tokenized_answers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -541,10 +535,6 @@
        "      <td>[skimmers, are, most, likely, at, gas, station...</td>\n",
        "      <td>[would, I, ever, need, credit, card, if, my, d...</td>\n",
        "      <td>[skimmer, be, most, likely, at, gas, station, ...</td>\n",
-       "      <td>[would, Ġi, Ġever, Ġneed, Ġcredit, Ġcard, Ġif,...</td>\n",
-       "      <td>[sk, immers, Ġare, Ġmost, Ġlikely, Ġat, Ġgas, ...</td>\n",
-       "      <td>[would i ever need credit card if my debit car...</td>\n",
-       "      <td>[skimmers are most likely at gas station pumps...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -554,10 +544,6 @@
        "      <td>[there, is, a, number, of, cheaper, online, op...</td>\n",
        "      <td>[cheap, way, to, wire, or, withdraw, money, fr...</td>\n",
        "      <td>[there, be, a, number, of, cheap, online, opti...</td>\n",
-       "      <td>[che, apest, Ġway, Ġto, Ġwire, Ġor, Ġwithdraw,...</td>\n",
-       "      <td>[there, Ġis, Ġa, Ġnumber, Ġof, Ġcheaper, Ġonli...</td>\n",
-       "      <td>[cheapest way to wire or withdraw money from u...</td>\n",
-       "      <td>[there is a number of cheaper online options t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -567,10 +553,6 @@
        "      <td>[large, and, wellknown, companies, are, typica...</td>\n",
        "      <td>[how, do, I, go, about, find, an, honest,  , e...</td>\n",
        "      <td>[large, and, wellknown, company, be, typically...</td>\n",
-       "      <td>[how, Ġdo, Ġi, Ġgo, Ġabout, Ġfinding, Ġan, Ġho...</td>\n",
-       "      <td>[large, Ġand, Ġwell, known, Ġcompanies, Ġare, ...</td>\n",
-       "      <td>[how do i go about finding an honest  ethical ...</td>\n",
-       "      <td>[large and wellknown companies are typically a...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -580,10 +562,6 @@
        "      <td>[why, does, it, make, sense, financially, to, ...</td>\n",
        "      <td>[why, invest, in, become, a, landlord]</td>\n",
        "      <td>[why, do, it, make, sense, financially, to, bu...</td>\n",
-       "      <td>[why, Ġinvest, Ġin, Ġbecoming, Ġa, Ġlandlord]</td>\n",
-       "      <td>[why, Ġdoes, Ġit, Ġmake, Ġsense, Ġfinancially,...</td>\n",
-       "      <td>[why invest in becoming a landlord]</td>\n",
-       "      <td>[why does it make sense financially to buy pro...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -593,17 +571,9 @@
        "      <td>[often, these, types, of, trades, fall, into, ...</td>\n",
        "      <td>[what, could, be, the, cause, of, a, extreme, ...</td>\n",
        "      <td>[often, these, type, of, trade, fall, into, tw...</td>\n",
-       "      <td>[what, Ġcould, Ġbe, Ġthe, Ġcause, Ġof, Ġa, Ġex...</td>\n",
-       "      <td>[often, Ġthese, Ġtypes, Ġof, Ġtrades, Ġfall, Ġ...</td>\n",
-       "      <td>[what could be the cause of a extreme highlow ...</td>\n",
-       "      <td>[often these types of trades fall into two dif...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -619,10 +589,6 @@
        "      <td>[i, disagree, with, the, selected, answer, ., ...</td>\n",
        "      <td>[what, percent, of, my, salary, should, I, save]</td>\n",
        "      <td>[I, disagree, with, the, select, answer, ., th...</td>\n",
-       "      <td>[what, Ġpercent, Ġof, Ġmy, Ġsalary, Ġshould, Ġ...</td>\n",
-       "      <td>[i, Ġdisagree, Ġwith, Ġthe, Ġselected, Ġanswer...</td>\n",
-       "      <td>[what percent of my salary should i save]</td>\n",
-       "      <td>[i disagree with the selected answer., theres ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12043</th>\n",
@@ -632,10 +598,6 @@
        "      <td>[how, on, earth, can, you, possibly, know, wha...</td>\n",
        "      <td>[why, do, people, invest, in, mutual, fund, ra...</td>\n",
        "      <td>[how, on, earth, can, you, possibly, know, wha...</td>\n",
-       "      <td>[why, Ġdo, Ġpeople, Ġinvest, Ġin, Ġmutual, Ġfu...</td>\n",
-       "      <td>[how, Ġon, Ġearth, Ġcan, Ġyou, Ġpossibly, Ġkno...</td>\n",
-       "      <td>[why do people invest in mutual fund rather th...</td>\n",
-       "      <td>[how on earth can you possibly know what is go...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12044</th>\n",
@@ -645,10 +607,6 @@
        "      <td>[each, country, would, have, to, go, back, to,...</td>\n",
        "      <td>[what, would, happen, if, the, euro, currency,...</td>\n",
        "      <td>[each, country, would, have, to, go, back, to,...</td>\n",
-       "      <td>[what, Ġwould, Ġhappen, Ġif, Ġthe, Ġeuro, Ġcur...</td>\n",
-       "      <td>[each, Ġcountry, Ġwould, Ġhave, Ġto, Ġgo, Ġbac...</td>\n",
-       "      <td>[what would happen if the euro currency went b...</td>\n",
-       "      <td>[each country would have to go back to its own...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12045</th>\n",
@@ -658,10 +616,6 @@
        "      <td>[theres, a, difference, between, missing, a, p...</td>\n",
        "      <td>[be, credit, card, not, view, as, credit, unti...</td>\n",
        "      <td>[there, s, a, difference, between, miss, a, pa...</td>\n",
-       "      <td>[are, Ġcredit, Ġcards, Ġnot, Ġviewed, Ġas, Ġcr...</td>\n",
-       "      <td>[the, res, Ġa, Ġdifference, Ġbetween, Ġmissing...</td>\n",
-       "      <td>[are credit cards not viewed as credit until y...</td>\n",
-       "      <td>[theres a difference between missing a payment...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12046</th>\n",
@@ -671,14 +625,10 @@
        "      <td>[when, you, own, stock, in, a, company, you, d...</td>\n",
        "      <td>[do, the, stock, market, create, any, sort, of...</td>\n",
        "      <td>[when, you, own, stock, in, a, company, you, d...</td>\n",
-       "      <td>[does, Ġthe, Ġstock, Ġmarket, Ġcreate, Ġany, Ġ...</td>\n",
-       "      <td>[when, Ġyou, Ġown, Ġstock, Ġin, Ġa, Ġcompany, ...</td>\n",
-       "      <td>[does the stock market create any sort of value]</td>\n",
-       "      <td>[when you own stock in a company you do litera...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>12047 rows × 10 columns</p>\n",
+       "<p>12047 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -747,75 +697,23 @@
        "12045  [be, credit, card, not, view, as, credit, unti...   \n",
        "12046  [do, the, stock, market, create, any, sort, of...   \n",
        "\n",
-       "                                 lemmatized_token_answer  \\\n",
-       "0      [skimmer, be, most, likely, at, gas, station, ...   \n",
-       "1      [there, be, a, number, of, cheap, online, opti...   \n",
-       "2      [large, and, wellknown, company, be, typically...   \n",
-       "3      [why, do, it, make, sense, financially, to, bu...   \n",
-       "4      [often, these, type, of, trade, fall, into, tw...   \n",
-       "...                                                  ...   \n",
-       "12042  [I, disagree, with, the, select, answer, ., th...   \n",
-       "12043  [how, on, earth, can, you, possibly, know, wha...   \n",
-       "12044  [each, country, would, have, to, go, back, to,...   \n",
-       "12045  [there, s, a, difference, between, miss, a, pa...   \n",
-       "12046  [when, you, own, stock, in, a, company, you, d...   \n",
-       "\n",
-       "                                  subword_token_question  \\\n",
-       "0      [would, Ġi, Ġever, Ġneed, Ġcredit, Ġcard, Ġif,...   \n",
-       "1      [che, apest, Ġway, Ġto, Ġwire, Ġor, Ġwithdraw,...   \n",
-       "2      [how, Ġdo, Ġi, Ġgo, Ġabout, Ġfinding, Ġan, Ġho...   \n",
-       "3          [why, Ġinvest, Ġin, Ġbecoming, Ġa, Ġlandlord]   \n",
-       "4      [what, Ġcould, Ġbe, Ġthe, Ġcause, Ġof, Ġa, Ġex...   \n",
-       "...                                                  ...   \n",
-       "12042  [what, Ġpercent, Ġof, Ġmy, Ġsalary, Ġshould, Ġ...   \n",
-       "12043  [why, Ġdo, Ġpeople, Ġinvest, Ġin, Ġmutual, Ġfu...   \n",
-       "12044  [what, Ġwould, Ġhappen, Ġif, Ġthe, Ġeuro, Ġcur...   \n",
-       "12045  [are, Ġcredit, Ġcards, Ġnot, Ġviewed, Ġas, Ġcr...   \n",
-       "12046  [does, Ġthe, Ġstock, Ġmarket, Ġcreate, Ġany, Ġ...   \n",
-       "\n",
-       "                                    subword_token_answer  \\\n",
-       "0      [sk, immers, Ġare, Ġmost, Ġlikely, Ġat, Ġgas, ...   \n",
-       "1      [there, Ġis, Ġa, Ġnumber, Ġof, Ġcheaper, Ġonli...   \n",
-       "2      [large, Ġand, Ġwell, known, Ġcompanies, Ġare, ...   \n",
-       "3      [why, Ġdoes, Ġit, Ġmake, Ġsense, Ġfinancially,...   \n",
-       "4      [often, Ġthese, Ġtypes, Ġof, Ġtrades, Ġfall, Ġ...   \n",
-       "...                                                  ...   \n",
-       "12042  [i, Ġdisagree, Ġwith, Ġthe, Ġselected, Ġanswer...   \n",
-       "12043  [how, Ġon, Ġearth, Ġcan, Ġyou, Ġpossibly, Ġkno...   \n",
-       "12044  [each, Ġcountry, Ġwould, Ġhave, Ġto, Ġgo, Ġbac...   \n",
-       "12045  [the, res, Ġa, Ġdifference, Ġbetween, Ġmissing...   \n",
-       "12046  [when, Ġyou, Ġown, Ġstock, Ġin, Ġa, Ġcompany, ...   \n",
-       "\n",
-       "                            sentence_tokenized_questions  \\\n",
-       "0      [would i ever need credit card if my debit car...   \n",
-       "1      [cheapest way to wire or withdraw money from u...   \n",
-       "2      [how do i go about finding an honest  ethical ...   \n",
-       "3                    [why invest in becoming a landlord]   \n",
-       "4      [what could be the cause of a extreme highlow ...   \n",
-       "...                                                  ...   \n",
-       "12042          [what percent of my salary should i save]   \n",
-       "12043  [why do people invest in mutual fund rather th...   \n",
-       "12044  [what would happen if the euro currency went b...   \n",
-       "12045  [are credit cards not viewed as credit until y...   \n",
-       "12046   [does the stock market create any sort of value]   \n",
-       "\n",
-       "                              sentence_tokenized_answers  \n",
-       "0      [skimmers are most likely at gas station pumps...  \n",
-       "1      [there is a number of cheaper online options t...  \n",
-       "2      [large and wellknown companies are typically a...  \n",
-       "3      [why does it make sense financially to buy pro...  \n",
-       "4      [often these types of trades fall into two dif...  \n",
+       "                                 lemmatized_token_answer  \n",
+       "0      [skimmer, be, most, likely, at, gas, station, ...  \n",
+       "1      [there, be, a, number, of, cheap, online, opti...  \n",
+       "2      [large, and, wellknown, company, be, typically...  \n",
+       "3      [why, do, it, make, sense, financially, to, bu...  \n",
+       "4      [often, these, type, of, trade, fall, into, tw...  \n",
        "...                                                  ...  \n",
-       "12042  [i disagree with the selected answer., theres ...  \n",
-       "12043  [how on earth can you possibly know what is go...  \n",
-       "12044  [each country would have to go back to its own...  \n",
-       "12045  [theres a difference between missing a payment...  \n",
-       "12046  [when you own stock in a company you do litera...  \n",
+       "12042  [I, disagree, with, the, select, answer, ., th...  \n",
+       "12043  [how, on, earth, can, you, possibly, know, wha...  \n",
+       "12044  [each, country, would, have, to, go, back, to,...  \n",
+       "12045  [there, s, a, difference, between, miss, a, pa...  \n",
+       "12046  [when, you, own, stock, in, a, company, you, d...  \n",
        "\n",
-       "[12047 rows x 10 columns]"
+       "[12047 rows x 6 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,21 +726,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vectorizing a text to numeric"
+    "# Vocabulary and Vectorization\n",
+    "- **Vocabulary**: A vocabulary is a mapping of unique words (tokens) to numerical indices, allowing text to be represented as numbers for machine learning models. It’s essential for transforming words into a format that models can process.\n",
+    "\n",
+    "- **Vectorization**: Vectorization is the process of converting text into numerical representations (vectors). This is done using the vocabulary, where each word is replaced by its corresponding index."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example**\n",
+    "\n",
+    "1. Sentence: ['what', 'be', 'interest', 'rate']\n",
+    "\n",
+    "2. Vocabulary: {'<'PAD'>': 0, <'UNK'>: 1, 'what': 2, 'be': 3, 'interest': 4, 'rate': 5}\n",
+    "\n",
+    "3. Vector: [2, 3, 4, 5]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['question', 'answer', 'word_token_question', 'word_token_answer'], dtype='object')"
+       "Index(['question', 'answer', 'word_token_question', 'word_token_answer',\n",
+       "       'lemmatized_token_question', 'lemmatized_token_answer'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "vocab = defaultdict(lambda: len(vocab))\n",
+    "UNK = vocab[\"<UNK>\"]\n",
+    "PAD = vocab[\"<PAD>\"]\n",
+    "\n",
+    "# Build vocab from both question and answer\n",
+    "for col in ['lemmatized_token_question', 'lemmatized_token_answer']:\n",
+    "    for tokens in df[col]:\n",
+    "        for token in tokens:\n",
+    "            _ = vocab[token]\n",
+    "\n",
+    "word2idx = dict(vocab)\n",
+    "idx2word = {idx: word for word, idx in word2idx.items()}\n",
+    "\n",
+    "\n",
+    "def vectorize(tokens, word2idx, max_len=10):\n",
+    "    vec = [word2idx.get(token, word2idx[\"<UNK>\"]) for token in tokens]\n",
+    "    vec = vec[:max_len] + [word2idx[\"<PAD>\"]] * (max_len - len(vec))\n",
+    "    return vec\n",
+    "\n",
+    "df['question_vector'] = df['lemmatized_token_question'].apply(lambda x: vectorize(x, word2idx))\n",
+    "df['answer_vector'] = df['lemmatized_token_answer'].apply(lambda x: vectorize(x, word2idx))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['question', 'answer', 'word_token_question', 'word_token_answer',\n",
+       "       'lemmatized_token_question', 'lemmatized_token_answer',\n",
+       "       'question_vector', 'answer_vector'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
