--- a/test.ipynb
+++ b/test.ipynb
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,6 +819,183 @@
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "class FinQADataset(Dataset):\n",
+    "    def __init__(self, df):\n",
+    "        self.questions = df['question_vector'].tolist()\n",
+    "        self.answers = df['answer_vector'].tolist()\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.questions)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return (\n",
+    "            torch.tensor(self.questions[idx], dtype=torch.long),\n",
+    "            torch.tensor(self.answers[idx], dtype=torch.long),\n",
+    "        )\n",
+    "\n",
+    "train_dataset = FinQADataset(df)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FinQANet(nn.Module):\n",
+    "    def __init__(self, vocab_size, embed_dim=256, hidden_dim=256):\n",
+    "        super(FinQANet, self).__init__()\n",
+    "        self.embedding = nn.Embedding(vocab_size, embed_dim, padding_idx=word2idx[\"<PAD>\"])\n",
+    "        \n",
+    "        self.encoder = nn.LSTM(embed_dim, hidden_dim, batch_first=True, bidirectional=True)\n",
+    "        \n",
+    "        # NEW: Project bidirectional encoder output to match decoder input size\n",
+    "        self.encoder2decoder = nn.Linear(hidden_dim * 2, hidden_dim)\n",
+    "        \n",
+    "        self.decoder = nn.LSTM(hidden_dim, hidden_dim, batch_first=True)\n",
+    "        self.fc_out = nn.Linear(hidden_dim, vocab_size)\n",
+    "\n",
+    "    def forward(self, input_ids, target_ids=None):\n",
+    "        embedded = self.embedding(input_ids)  # [B, T, E]\n",
+    "        enc_out, _ = self.encoder(embedded)   # [B, T, 2H]\n",
+    "        \n",
+    "        # Project encoder output to decoder input dimension\n",
+    "        dec_input = self.encoder2decoder(enc_out)  # [B, T, H]\n",
+    "        \n",
+    "        if target_ids is not None:\n",
+    "            # Optionally use target embeddings for teacher forcing\n",
+    "            target_emb = self.embedding(target_ids)\n",
+    "            dec_out, _ = self.decoder(target_emb)\n",
+    "        else:\n",
+    "            dec_out, _ = self.decoder(dec_input)  # fallback decode\n",
+    "        \n",
+    "        output = self.fc_out(dec_out)  # [B, T, V]\n",
+    "        return output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30, Loss: 1544.8959\n",
+      "Epoch 2/30, Loss: 333.4679\n",
+      "Epoch 3/30, Loss: 136.9874\n",
+      "Epoch 4/30, Loss: 39.6945\n",
+      "Epoch 5/30, Loss: 4.8085\n",
+      "Epoch 6/30, Loss: 1.5984\n",
+      "Epoch 7/30, Loss: 0.9437\n",
+      "Epoch 8/30, Loss: 0.5999\n",
+      "Epoch 9/30, Loss: 0.3916\n",
+      "Epoch 10/30, Loss: 0.2601\n",
+      "Epoch 11/30, Loss: 0.1752\n",
+      "Epoch 12/30, Loss: 0.1195\n",
+      "Epoch 13/30, Loss: 0.0819\n",
+      "Epoch 14/30, Loss: 0.0563\n",
+      "Epoch 15/30, Loss: 0.0386\n",
+      "Epoch 16/30, Loss: 0.0264\n",
+      "Epoch 17/30, Loss: 0.0180\n",
+      "Epoch 18/30, Loss: 0.0123\n",
+      "Epoch 19/30, Loss: 0.0085\n",
+      "Epoch 20/30, Loss: 0.0059\n",
+      "Epoch 21/30, Loss: 0.0041\n",
+      "Epoch 22/30, Loss: 0.0029\n",
+      "Epoch 23/30, Loss: 0.0021\n",
+      "Epoch 24/30, Loss: 0.0015\n",
+      "Epoch 25/30, Loss: 0.0010\n",
+      "Epoch 26/30, Loss: 0.0008\n",
+      "Epoch 27/30, Loss: 0.0006\n",
+      "Epoch 28/30, Loss: 0.0004\n",
+      "Epoch 29/30, Loss: 0.0003\n",
+      "Epoch 30/30, Loss: 0.0002\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Move model to device\n",
+    "model = FinQANet(vocab_size=len(word2idx)).to(device)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+    "criterion = nn.CrossEntropyLoss(ignore_index=word2idx[\"<PAD>\"])\n",
+    "\n",
+    "num_epochs = 30\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "\n",
+    "    for input_ids, target_ids in train_loader:\n",
+    "        # Move data to device\n",
+    "        input_ids = input_ids.to(device)\n",
+    "        target_ids = target_ids.to(device)\n",
+    "\n",
+    "        # Forward pass\n",
+    "        outputs = model(input_ids, target_ids)  # [batch, seq_len, vocab_size]\n",
+    "\n",
+    "        # Compute loss\n",
+    "        loss = criterion(outputs.view(-1, outputs.size(-1)), target_ids.view(-1))\n",
+    "\n",
+    "        # Backward and optimize\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        total_loss += loss.item()\n",
+    "\n",
+    "    print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {total_loss:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧠 Predicted Answer: mostly french40 falsify 10qs 20142015 20142015 20142015 consequence remain remain\n",
+      "✅ Ground Truth: skimmer be most likely at gas station pump . if your debit card be compromise you be get money take out of your checking account which could cause a cascade of nsf fee . never use debit card at pump . clark howard call debit card piece of trash fake visamc that be because of all the point mention above but the most important fact be back in the 60 when congress be protect its constituent they make sure that the bank be responsible for fraud and maxe your liability at 50 . debit card be introduce much later when congress be interested in protect bank . so you have no protection on your debit card and if they find you negligent with your card they may not replace the steal fund . I get rid of my debit card and only have an atm card . so it can not be use in store which mean you have to know the pin and then you can only get 200 a day .\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    input_sample = torch.tensor(df['question_vector'].iloc[0]).unsqueeze(0).to(device)  # send to device\n",
+    "    output = model(input_sample)\n",
+    "\n",
+    "    pred_ids = torch.argmax(output, dim=-1).squeeze(0)  # [seq_len]\n",
+    "    predicted_tokens = [\n",
+    "        idx2word[idx.item()]\n",
+    "        for idx in pred_ids\n",
+    "        if idx.item() not in {word2idx[\"<PAD>\"], word2idx[\"<UNK>\"]}\n",
+    "    ]\n",
+    "\n",
+    "    print(\"🧠 Predicted Answer:\", \" \".join(predicted_tokens))\n",
+    "    print(\"✅ Ground Truth:\", \" \".join(df['lemmatized_token_answer'].iloc[0]))\n"
    ]
   }
  ],
