--- a/RoBERTa.ipynb
+++ b/RoBERTa.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12038,7 +12038,7 @@
     "        record[\"answer\"], \n",
     "        padding=\"max_length\", \n",
     "        truncation=True,\n",
-    "        max_length=128  # You can increase this if needed\n",
+    "        max_length=128  \n",
     "    )\n",
     "\n",
     "tokenized_train = train_ds.map(tokenize_function, batched=True)\n",
