--- a/RoBERTa.ipynb
+++ b/RoBERTa.ipynb
@@ -256,6 +256,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Label Assignment for Binary Classification\n",
+    "\n",
+    "- This step was important because models like RoBERTa require labeled data to perform supervised learning. The labels enable the model to compute loss during training and improve its predictions.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
