--- a/tokenization_test.ipynb
+++ b/tokenization_test.ipynb
@@ -63,7 +63,8 @@
     }
    ],
    "source": [
-    "!pip install --upgrade torch transformers sentence-transformers\n"
+    "!pip install --upgrade torch transformers sentence-transformers\n",
+    "#"
    ]
   },
   {
