--- a/Model.ipynb
+++ b/Model.ipynb
@@ -305,18 +305,18 @@
     "\n",
     "        predicted_answer, matched_question, score = get_response_with_score(user_query)\n",
     "\n",
-    "        print(f\"\\n🟢 Query: {user_query}\")\n",
-    "        print(f\"✅ Expected: {expected}\")\n",
-    "        print(f\"🤖 Predicted: {predicted_answer}\")\n",
-    "        print(f\"🧠 Matched FAQ Question: {matched_question}\")\n",
-    "        print(f\"📊 Similarity Score: {score:.2f}\")\n",
+    "        print(f\"\\n Query: {user_query}\")\n",
+    "        print(f\" Expected: {expected}\")\n",
+    "        print(f\" Predicted: {predicted_answer}\")\n",
+    "        print(f\" Matched FAQ Question: {matched_question}\")\n",
+    "        print(f\" Similarity Score: {score:.2f}\")\n",
     "        print(\"-\" * 60)\n",
     "\n",
     "        if predicted_answer.strip().lower() == expected.strip().lower():\n",
     "            correct += 1\n",
     "    \n",
     "    accuracy = correct / total * 100\n",
-    "    print(f\"\\n✅ {dataset_name} Accuracy: {accuracy:.2f}% ({correct}/{total})\")\n",
+    "    print(f\"\\n {dataset_name} Accuracy: {accuracy:.2f}% ({correct}/{total})\")\n",
     "\n",
     "# Evaluate on validation dataset\n",
     "evaluate_on_dataset(validation_df, 'Validation')\n",
