--- a/gpt_testing.ipynb
+++ b/gpt_testing.ipynb
@@ -38,6 +38,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Reads a training dataset.\n",
+        "\n",
+        "- Cleans it by removing duplicate entries.\n",
+        "\n",
+        "- Formats each row into a structure that an AI model can understand.\n",
+        "\n",
+        "- Saves the cleaned and formatted data.\n",
+        "\n",
+        "- Loads it into a tool for further AI training."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 53,
       "metadata": {
@@ -96,6 +111,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Define a function (tokenize_function) to convert text into numerical tokens.\n",
+        "\n",
+        "- Use tokenizer to process formatted prompts\n",
+        "\n",
+        "- Padding set to (max_length=128).\n",
+        "\n",
+        "- cuts excess tokens\n",
+        "\n",
+        "- Copy tokens to \"labels\" for training\n",
+        "\n",
+        "- Apply function to dataset using dataset.map(tokenize_function).\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 54,
       "metadata": {
@@ -142,6 +174,23 @@
         "    return tokens\n",
         "\n",
         "tokenized_dataset = dataset.map(tokenize_function)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- LoRA (Low-Rank Adaptation) helps fine-tune AI models without updating the entire model.\n",
+        "\n",
+        "- Only certain parts of the model (c_attn, c_proj) are adjusted for efficiency.\n",
+        "\n",
+        "- r=8: Controls how much fine-tuning happens.\n",
+        "\n",
+        "- lora_alpha=32: Adjusts the learning strength.\n",
+        "\n",
+        "- lora_dropout=0.1: Prevents the model from overfitting (memorizing too much).\n",
+        "\n",
+        "- LoRA is applied to the AI model using get_peft_model()."
       ]
     },
     {
@@ -254,9 +303,9 @@
         "\n",
         "training_args = TrainingArguments(\n",
         "    output_dir=\"./finbot_model\",\n",
-        "    per_device_train_batch_size=16,\n",
-        "    gradient_accumulation_steps=16,\n",
-        "    num_train_epochs=10,\n",
+        "    per_device_train_batch_size=8,\n",
+        "    gradient_accumulation_steps=8,\n",
+        "    num_train_epochs=2,\n",
         "    learning_rate=3e-5,\n",
         "    bf16=True,\n",
         ")\n",
