--- a/smart_bot.ipynb
+++ b/smart_bot.ipynb
@@ -1446,7 +1446,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1460,7 +1460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.1"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
